overflow fix

--- a/style/index.scss
+++ b/style/index.scss
@@ -47,6 +47,10 @@ table {
 	border-spacing: 0;
 }
 
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 
 html {
 	font-family: 'Lato', sans-serif;
